# quasar

./: .gitignore  Cargo.toml  Makefile  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: build.rs  cfg.rs  clean.rs  config.rs  deploy.rs  dump.rs  error.rs  idl.rs  init.rs  lib.rs  main.rs  new.rs  style.rs  test.rs  toolchain.rs  utils.rs
cli/src/init/: scaffold.rs
core/src/: dynamic.rs  entrypoint.rs  lib.rs  pda.rs  prelude.rs  remaining.rs  traits.rs
core/src/accounts/: account.rs  mod.rs
core/src/cpi/: buf.rs  mod.rs  system.rs
core/src/sysvars/: rent.rs
core/tests/: cpi.rs  miri.rs
derive/src/: declare_program.rs  helpers.rs  instruction.rs  lib.rs  program.rs  writebytes.rs
derive/src/account/: dynamic.rs
examples/anchor-vault/: Cargo.toml
examples/basket-vault/: Cargo.toml  README.md  basket-vault.test.ts  package.json  tsconfig.json
examples/basket-vault/src/: lib.rs  state.rs  tests.rs
examples/basket-vault/src/instructions/: create_basket.rs  deposit.rs  mod.rs  withdraw.rs
examples/escrow/: Cargo.toml
examples/multisig/: Cargo.toml
examples/upstream-escrow/: Cargo.toml
examples/upstream-vault/: Cargo.toml
examples/vault/: Cargo.toml
idl/src/: codegen_ts.rs  types.rs
idl/tests/: parser.rs
lang/src/: client.rs  instruction_arg.rs  lib.rs  prelude.rs
pod/: Cargo.toml
profile/: Cargo.toml  Readme.md
profile/src/: lib.rs  main.rs  output.rs
quasar/src/: lib.rs
spl/: Cargo.toml
spl/src/: close.rs  init.rs  lib.rs
spl/tests/: metadata_cpi.rs  metadata_state.rs
(+68 files in other folders)
