[package]
name = "quasar-basket-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
alloc = []
client = []
debug = []

[dependencies]
quasar-lang = { path = "../../lang" }
quasar-spl = { path = "../../spl" }

[dev-dependencies]
mollusk-svm = "0.10.3"
mollusk-svm-programs-token = "0.10.3"
quasar-basket-vault-client = { path = "../../target/client/rust/quasar-basket-vault-client" }
solana-account = { version = "3.4.0" }
solana-address = { version = "2.2.0", features = ["decode"] }
solana-instruction = { version = "3.2.0", features = ["bincode"] }
solana-program-pack = { version = "3.1.0" }
spl-token-interface = { version = "2.0.0" }
